<resources>
    <string name="app_name">patient</string>
    <string name="txt_email">Email</string>
    <string name="txt_username">Username</string>
    <string name="txt_password">Password</string>
    <string name="txt_login">Login</string>
    <string name="txt_register">Register</string>
    <string name="txt_login_desc">don\'t have an account?</string>
    <string name="txt_regis_new_account">Register a New Account</string>
    <string name="txt_have_account">already have an account?</string>
    <string name="txt_sign">Sign In Here</string>
    <string name="txt_id">id</string>
    <string name="txt_add_new_patient">Add New Patient</string>
    <string name="txt_confirm_password">Confirm Password</string>
</resources>